# kothd

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: MIGRATION_GUIDE_ON_PREMISE.md  SOLUTION_EXPLOITS.md  TROUBLESHOOTING_GUIDE.md  admin-guide.md
hill-agent/: Dockerfile  deploy.sh  go.mod  koth-agent.service  main.go
hills/: README-CHALLENGES.md  deploy-all.sh  deploy-hill.sh  reset-hill.sh
hills/hill1-web/: Dockerfile  docker-compose.yml  entrypoint.sh
hills/hill2-services/: Dockerfile  docker-compose.yml  entrypoint.sh
hills/hill3-api/: Dockerfile  docker-compose.yml  entrypoint.sh
hills/hill4-db/: Dockerfile  docker-compose.yml  entrypoint.sh
hills/pivot-dmz/: docker-compose.yml  setup-agents.sh  setup-pivot.sh
nginx/: nginx.conf
scoreboard/: Dockerfile  init.sql  requirements.txt
scoreboard/app/: config.py  database.py  main.py  models.py  schemas.py
scoreboard/static/: admin.html  dashboard.html  history.html  index.html  landing.html  login.html  org-login.html  organizer.html  register.html
scorebot/: Dockerfile  go.mod  go.sum  main.go
scorebot/checker/: checker.go  checker_test.go
scripts/: backup-all-vps.sh  deploy-all.sh  deploy.sh  generate-env.sh  restore-to-new-vm.sh  setup-hill1.sh  setup-hill2.sh  setup-koth-server.sh  setup-pivot.sh  setup-vpn-openvpn.sh  setup-vpn.sh  simulate_30min.py  smoke-test.sh  verify-deployment.sh
tests/: conftest.py  test_api.py  test_game_manager.py  test_schemas.py  test_scoring.py
(+39 files in other folders)
